# cpp_client_telemetry

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  Android.bp  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CodeQL.yml  DEPS  LICENSE  Package.swift  README.md  RunOACR.bat  aria-sdk.spec.in  azure-pipelines.yml  build-Win32Debug.bat  build-Win32Release.bat  build-all-v142.bat  build-all-v143.bat  build-all-v145.bat  build-all-windows.bat  build-all.bat  build-android-os.cmd  build-android-os.sh  build-android.cmd  build-clang.sh  build-cmake-clang-vs2017.cmd  build-cmake-clang-vs2019.cmd  build-cmake-clang-vs2022.cmd  build-cmake-clang.cmd  build-codeql-cpp.bat  build-docker.cmd  build-docker.sh  build-emcc.cmd  build-emcc.sh  build-exp.sh  build-gtest.sh  (+31 more)
bondlite/tests/: BondLiteDump.cpp  BondLiteTests.cpp  CMakeLists.txt  CompactBinaryProtocolTests.cpp  FullDumpBinaryBlob.hpp  Main.cpp
examples/HelloAria/: CMakeLists.txt  DebugCallback.cpp  DebugCallback.hpp  HelloAria.vcxproj  HelloAria.vcxproj.filters  LogManager-v1.hpp  LogManagerA.hpp  LogManagerB.hpp  LogManagerV1.hpp  OfficeTest.cpp  demo.c  deploy-dll.cmd  guest.cpp  main.cpp  run-tests.sh
examples/linktest/: CMakeLists.txt  build.sh  deploy-dll.cmd  linktest.cpp  linktest.vcxproj  linktest.vcxproj.filters
examples/sample1/: CMakeLists.txt  DebugCallback.cpp  DebugCallback.hpp  build.sh  main.cpp  run-tests.sh
examples/zlibtest/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  zlibtest
googletest/: CMakeLists.txt  README.MSFT
lib/: CMakeLists.txt
lib/ai/: AIHttpRequestEncoder.cpp  AIHttpRequestEncoder.hpp  AIHttpResponseDecoder.cpp  AIHttpResponseDecoder.hpp  AIJsonArraySplicer.cpp  AIJsonArraySplicer.hpp  AIJsonSerializer.cpp  AIJsonSerializer.hpp  AIPackager.cpp  AIPackager.hpp  AITelemetrySystem.cpp  AITelemetrySystem.hpp  azmon.vcxitems
lib/android_build/: build.gradle  gradle.properties  gradlew  gradlew.bat  ide.cmd  settings.gradle  testandlog  testandlog.cmd  tools.gradle
lib/api/: AllowedLevelsCollection.cpp  AllowedLevelsCollection.hpp  AuthTokensController.cpp  AuthTokensController.hpp  CommonLogManagerInternal.cpp  CommonLogManagerInternal.hpp  ContextFieldsProvider.cpp  ContextFieldsProvider.hpp  CorrelationVector.cpp  DataViewerCollection.cpp  DataViewerCollection.hpp  DataViewerCollectionImpl.cpp  DataViewerCollectionImpl.hpp  DataViewer_CAPI.cpp  DataViewer_CAPI.hpp  EvtPropConverter.cpp  EvtPropConverter.hpp  GuestLogManager .hpp  GuestLogManager.cpp  HostGuestLogManage.cpp  HostGuestLogManager.hpp  ILogConfiguration.cpp  ILogManager.hpp  ILogManagerInternal.hpp  IRuntimeConfig.hpp  LogConfiguration.cpp  LogConfiguration.hpp  LogController.cpp  LogController.hpp  LogManager.cpp  LogManager.hpp  LogManagerFactory.cpp  LogManagerFactory.hpp  LogManagerImpl.cpp  LogManagerImpl.hpp  LogManagerProvider.cpp  LogManagerSimple.cpp  LogSessionData.cpp  LogSessionData.hpp  Logger.cpp  (+7 more)
lib/backoff/: Backoff_ExponentialWithJitter.hpp  IBackoff.cpp  IBackoff.hpp
lib/binder/: ParcelVector.cpp  README.md
lib/bond/: All.hpp  BondSerializer.cpp  BondSerializer.hpp  BondSplicer.hpp  Common.hpp  CommonSchemaEvent.bond  CompactBinaryProtocolReader.hpp  CompactBinaryProtocolWriter.hpp  CsProtocol.bond  FullDumpBinaryBlob.hpp
lib/bwcontrol/: BandwidthController_ResourceManager.cpp  BandwidthController_ResourceManager.hpp
lib/callbacks/: DebugSource.cpp
lib/compression/: HttpDeflateCompression.cpp  HttpDeflateCompression.hpp
lib/config/: RuntimeConfig_Default.cpp  RuntimeConfig_Default.hpp  RuntimeConfig_ECS.cpp  RuntimeConfig_ECS.hpp
lib/controlplane/: ConcurrentObservable.hpp  ControlPlaneConcurrentObservable.hpp  ControlPlaneProvider.cpp  DiskLocalStorage.cpp  DiskLocalStorage.hpp  ILocalStorage.hpp  ITenantDataSerializer.hpp  LocalStorageConcurrentObservable.hpp  SingleControlPlane.cpp  SingleControlPlane.hpp  TenantDataSerializer.cpp  TenantDataSerializer.hpp
lib/decoder/: AriaDecoderV3.cpp  AriaDecoderV3.hpp  AriaDecoderV3Internal.hpp  PayloadDecoder.cpp  decoder.vcxitems  decoder.vcxitems.filters
lib/decorators/: BaseDecorator.cpp  BaseDecorator.hpp  EventPropertiesDecorator.hpp  IDecorator.hpp  RecordFlagConstants.hpp  RuntimeConfigDecorator.hpp  SemanticApiDecorators.hpp  SemanticContextDecorator.hpp
lib/exp/: EXPCommonClient.cpp  EXPCommonClient.hpp  FifoFileStorage.hpp  IDataStorage.hpp  JsonHelper.cpp  JsonHelper.hpp  README
lib/exporters/: ISerializer.cpp  ISerializer.hpp  ISplicer.hpp
lib/filter/: EventFilter.cpp  EventFilter.hpp  EventFilterCollection.cpp  EventFilterCollection.hpp  EventFilterRegulator.cpp  EventFilterRegulator.hpp  IEventFilter.hpp  MengpingEventFilter.cpp  MengpingEventFilter.hpp  MengpingEventFilterRegulator.cpp  MengpingEventFilterRegulator.hpp
lib/http/: HttpClient.hpp  HttpClientFactory.cpp  HttpClientFactory.hpp  HttpClientManager.cpp  HttpClientManager.hpp  HttpClient_Android.cpp  HttpClient_Android.hpp  HttpClient_Apple.hpp  HttpClient_Apple.mm  HttpClient_CAPI.cpp  HttpClient_CAPI.hpp  HttpClient_Curl.cpp  HttpClient_Curl.hpp  HttpClient_HttpStack.cpp  HttpClient_HttpStack.hpp  HttpClient_WinInet.cpp  HttpClient_WinInet.hpp  HttpClient_WinRt.cpp  HttpClient_WinRt.hpp  HttpClient_iOS.hpp  HttpClient_iOS.mm  HttpPinger.hpp  HttpRequestApple.hpp  HttpRequestApple.mm  HttpRequestEncoder.cpp  HttpRequestEncoder.hpp  HttpResponseDecoder.cpp  HttpResponseDecoder.hpp  IBoundedHttpClientCancel.hpp  httpClient.java
lib/include/: CMakeLists.txt
lib/jni/: AriaProxy.cpp  CMakeLists.txt  JavaUtils.cpp  JavaUtils.hpp  JniConvertors.cpp  JniConvertors.hpp  JniUtils.cpp  JniUtils.hpp  LogManagerDDVController_jni.cpp  LogManager_jni.cpp  Logger_jni.cpp  PrivacyGuardHelper.cpp  PrivacyGuardHelper.hpp  PrivacyGuardState.cpp  PrivacyGuardState.hpp  PrivacyGuard_jni.cpp  RunTests.hpp  SanitizerHelper.hpp  Sanitizer_jni.cpp  SemanticContext_jni.cpp  SignalsHelper.hpp  Signals_jni.cpp  SubstrateSignals_jni.cpp  (+4 more)
linktest/: CMakeLists.txt  ReadMe.txt  linktest.cpp  linktest.vcxproj
tests/: CMakeLists.txt
(+1978 files in other folders)
